bangor.ac.uk (archived on 2019-04-12)
{
  "alexa_rank": 96343,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 18345,
  "classifier_probability": 0.74,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.83,
  "homepage_snapshot_redirected_domain": "bangor.ac.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190402210754id_/https://www.bangor.ac.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190402210754id_/http%3A//bangor.ac.uk",
  "interval": "2019_A",
  "link_text": "Privacy and Cookies",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "bangor.ac.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190412143244id_/https%3A//www.bangor.ac.uk/about/cookies/index.php.en",
  "policy_title": "Website privacy & cookies | About the University | Bangor University",
  "policy_url": "bangor.ac.uk/about/cookies/index.php.en",
  "sha1": "3b6249d78b938fb958badd2aa277ad4a7660952d",
  "simhash": 12213878576417938268,
  "simhash_updated": false,
  "site_hostname": "bangor.ac.uk",
  "site_url": "http://bangor.ac.uk",
  "smog": 12.57,
  "strict_updated": true,
  "timestamp": "20190412143244",
  "word_count": 2952,
  "year": 2019
}

--- a/b/ba/ban/bangor.ac.uk.html
+++ b/b/ba/ban/bangor.ac.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bangor.ac.uk privacy policy that was archived on 2017-11-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20171112022415id_/https%3A//www.bangor.ac.uk/corporate/cookies/index.php.en) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bangor.ac.uk privacy policy that was archived on 2019-04-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190412143244id_/https%3A//www.bangor.ac.uk/about/cookies/index.php.en) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!-- InstanceBegin template="/Templates/standard.dwt.php" codeOutsideHTMLIsLocked="true" --><head>
 <meta charset="utf-8">
@@ -34,14 +34,17 @@
 }
 </style>
 <!-- InstanceEndEditable -->
-<link href="https://common.bangor.ac.uk/assets/css/bangor-17.8.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.0/css/swiper.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500,500i,700,700i|Roboto+Slab:400,700&amp;subset=latin-ext" rel="stylesheet">
+<link href="https://www.bangor.ac.uk/common/css/bangor-19.2.min.css" rel="stylesheet">
+<!--<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
+<!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/v4-shims.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500,500i,700,700i%7CRoboto+Slab:400,700&amp;subset=latin-ext" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>window.script_name = "/about/cookies/index.php.en";</script>
-<script src="https://common.bangor.ac.uk/assets/js/bangor-17.7.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.0/js/swiper.jquery.min.js"></script>
+<script src="https://www.bangor.ac.uk/common/js/bangor-18.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -51,6 +54,7 @@ ga('create', 'UA-1585450-1', 'auto');
 ga('create',  'UA-1585450-1', {'siteSpeedSampleRate': 100});
 ga('require', 'linkid');
 ga('send', 'pageview');
+ga('set', 'anonymizeIp', true);
 </script>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -122,8 +126,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div id="banner">
 <!-- InstanceBeginEditable name="banner" -->
 <picture>
-	<source srcset="//www.bangor.ac.uk/common/img/headers/480px/Image31.jpg" media="(max-width: 480px)">
-	<img src="//www.bangor.ac.uk/common/img/headers/Image9.jpg" alt="">
+	<source srcset="//www.bangor.ac.uk/common/img/headers/480px/Image33.jpg" media="(max-width: 480px)">
+	<img src="//www.bangor.ac.uk/common/img/headers/Image33.jpg" alt="">
 </picture><!-- InstanceEndEditable -->
   </div>
 </div>
@@ -140,15 +144,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<li><a href="/about/history.php.en">University History</a></li>
 	<li><a href="/about/management.php.en">University Management &amp; Governance</a>
 		<ul>
-			<li><a href="/planning/">Planning &amp; Governance Office</a></li>
+		  <li><a href="/governance-and-compliance/index.php.en">Governance and Compliance</a></li>
 			<li><a href="/universitymanagement/minutes-and-reports.php.en">Minutes and Reports</a></li>
 			<li><a href="/planning/policy-register/index.php.en">Policy Register</a></li>
 			<li><a href="/planning/strategic-plan/index.php.en">Strategic Plan</a></li>
 			<li><a href="/about/university-diary.php.en">University Diary</a></li>
+			<li><a href="/about/university-structures/index.php.en">University Structures</a></li>
 		</ul>
 	</li>
 	<li><a href="/about/senior_management.php.en">Senior Management</a></li>
 	<li><a href="/about/academic-schools.php.en">Academic Schools &amp; Colleges</a></li>
+	<li><a href="/about/services-facilities.php.en">Central Services and Facilities</a></li>
 	<li><a href="/about/access.php.en">Teaching, Learning &amp; Widening Access</a></li>
 	<li><a href="/about/research.php.en">Research Excellence</a></li>
 	<li><a href="/about/pontio/index.php.en">Pontio</a>
@@ -168,6 +174,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<li><a href="/about/location.php.en">Our Location</a></li>
 	<li><a href="/about/mission.php.en">Our Mission</a></li>
 	<li><a href="/about/partnerships.php.en">Partnerships</a></li>
+	<li><a href="https://jobs.bangor.ac.uk/index.php.en">Working for us</a></li>
 	<li><a href="/about/hon_fellows.php.en">Honorary Fellows</a></li>
 	<li><a href="/news/index.php.en">News and Events</a></li>
 	<li><a href="/about/links.php.en">Links</a></li>
@@ -219,14 +226,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <ul>
        <li>www.bangor.ac.uk/directoryname/ e.g. <a href="/courses">www.bangor.ac.uk/courses</a></li>
        <li>http://sitename.bangor.ac.uk/ eg. <a href="http://barheadedgoose.bangor.ac.uk/">http://barheadedgoose.bangor.ac.uk/</a></li>
-       <li><a href="http://m.bangor.ac.uk">http://m.bangor.ac.uk</a></li>
      </ul>
      <h2>Website Privacy Policy and Data Protection</h2>
-     <p>The University is a Registered Data Controller as defined by the Data  Protection Act 1998. Any personal details collected through this web  site and provided by you will be processed in accordance with the Act,  and will only be used for the purpose or purposes stated on the relevant  page.</p>
+     <p>The University is a Registered Data Controller as defined by the Data  Protection Act 2018. Any personal details collected through this web  site and provided by you will be processed in accordance with the Act,  and will only be used for the purpose or purposes stated on the relevant  page.</p>
      <p>You may also wish to consult our;</p>
      <ul>
-       <li><a href="/ar/ro/recordsmanagement/freedomofinformation/index.php.en">Freedom of Information Policy</a></li>
-       <li><a href="/ar/ro/recordsmanagement/dataprotection/DPPolicy.php.en">Data Protection Policy</a></li>
+       <li><a href="/governance-and-compliance/freedomofinformation/index.php.en">Freedom of Information Policy</a></li>
+       <li><a href="/governance-and-compliance/dataprotection/index.php.en">Data Protection Policy</a></li>
        <li><a href="Privacy Policy.pdf">Privacy Policy (Website)</a></li>
      </ul>
 <h2>Website Privacy and cookies</h2>
@@ -527,24 +533,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="wrapper white bg-corp-lead" id="footer">
 	<footer class="content flex-container padded">
 		<div id="footer-social" class="block-1 block-m-2 block-xs-12">
-			<a href="https://www.facebook.com/BangorUniversity"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-			<a href="https://twitter.com/BangorUni"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-			<a href="https://www.youtube.com/user/bangortv"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
-			<a href="https://instagram.com/bangor_university/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-			<a href="http://www.linkedin.com/edu/school?id=20409"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-			<a href="https://plus.google.com/102299689013410617534?prsrc=3" rel="publisher"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
+			<a href="https://www.facebook.com/BangorUniversity"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+			<a href="https://twitter.com/BangorUni"><i class="fab fa-twitter-square" aria-hidden="true"></i></a>
+			<a href="https://www.youtube.com/user/bangortv"><i class="fab fa-youtube-square" aria-hidden="true"></i></a>
+			<a href="https://instagram.com/bangor_university/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+			<a href="http://www.linkedin.com/edu/school?id=20409"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+			<a href="https://plus.google.com/102299689013410617534?prsrc=3" rel="publisher"><i class="fab fa-google-plus-square" aria-hidden="true"></i></a>
 		</div>
 		<div id="footer-links" class="block-3 block-m-8 block-xs-12">
 			<p><a href="/about/contacts.php.en">Contacts</a></p>
 			<p><a href="/campusmap">Maps and Travel</a></p>
 			<p><a href="https://my.bangor.ac.uk/index.php.en">My Bangor</a> for Staff and Students</p>
-			<p><a href="/planning/governance.php.en">Legal Compliance</a></p>
-			<p><a href="/corporate/cookies/index.php.en">Privacy and Cookies</a></p>
+			<p><a href="/governance-and-compliance/index.php.en">Legal Compliance</a></p>
+			<p><a href="/about/cookies/index.php.en">Privacy and Cookies</a></p>
 		</div>
 		<div id="footer-address" class="block-8 block-m-10 block-xs-12">
 			<p>About the University<br>
 Bangor University, Bangor, Gwynedd LL57 2DG UK </p>
-<p>Phone: <a href="tel:+441248351151">+44 1248&nbsp;351151</a></p>
+<p>Phone: <a href="tel:+441248351151" aria-label="Phone: +44 1248 +44 1248&nbsp;351151">+44 1248&nbsp;351151</a></p>
 <p>Email: <a href="mailto:marketing@bangor.ac.uk">marketing@bangor.ac.uk</a></p>
 <p>Bangor University is a Registered Charity: No. 1141565</p>
 		</div>
