--- a/f/fr/fre/freedaysegypt.com.html
+++ b/f/fr/fre/freedaysegypt.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freedaysegypt.com privacy policy that was archived on 2018-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181231075628id_/http%3A//www.freedaysegypt.com/privicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freedaysegypt.com privacy policy that was archived on 2019-04-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190412151807id_/http%3A//freedaysegypt.com/privicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -29,7 +29,7 @@
     <td height="345" colspan="3" align="center" valign="top" bgcolor="#A6C8EA">
 <table width="955" border="0" cellpadding="0" cellspacing="0" bgcolor="#3375C1" align="center">
       <tbody><tr>
-        <td height="30" colspan="3" align="left" valign="top" bgcolor="#C0C0C0"><a href="index.php"><img src="images/header_04.jpg" alt="Go Home Page" width="955" height="325" border="0"></a></td>
+        <td height="30" colspan="3" align="left" valign="top" bgcolor="#C0C0C0"><a href="index.php"><img src="images/header_01.jpg" alt="Go Home Page" width="955" height="325" border="0"></a></td>
       </tr>
       <tr>
         <td colspan="3" align="left" valign="top" bgcolor="#E4E4E4">
