--- a/p/pl/pla/plansinfo.com.html
+++ b/p/pl/pla/plansinfo.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the plansinfo.com privacy policy that was archived on 2016-10-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161031064732id_/http%3A//www.plansinfo.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the plansinfo.com privacy policy that was archived on 2019-04-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190412222441id_/https%3A//www.plansinfo.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" href="http://cdn1.plansinfo.com/style.css">
+<link rel="stylesheet" href="https://cdn3.plansinfo.com/style.css">
 
 <script id="facebook-jssdk" src="http://connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=441888315886068"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
 
