--- a/c/co/com/comfi.com.html
+++ b/c/co/com/comfi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the comfi.com privacy policy that was archived on 2016-11-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161114145502id_/https%3A//www.comfi.com/Privacy_Policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the comfi.com privacy policy that was archived on 2019-04-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190413213513id_/http%3A//comfi.com/Privacy_Policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta charset="utf-8">
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Comfi">
 	<meta name="google-play-app" content="app-id=com.comfi.android">
-
+    
 	<title>Comfi.com - Privacy Policy</title>
 
 	<link rel="icon" href="/favicon.ico">
@@ -18,31 +18,42 @@
 	
 	
 	<!-- Bootstrap core CSS -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css" rel="stylesheet" integrity="sha384-yxFy3Tt84CcGRj9UI7RA25hoUMpUPoFzcdPtK3hBdNgEGnh9FdKgMVM+lbAZTKN2" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<!-- Custom CSS -->
-	<link href="/img/custom.css?v20160606" rel="stylesheet">
 
-	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<link href="https://maxcdn.bootstrapcdn.com/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <!-- Custom CSS -->
+	<link href="/img/custom.css?v2018022101" rel="stylesheet">
 
-	<!-- Load Godot -->
-	<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript">
+    <link href="/img/styles.css" rel="stylesheet">
+
+    <!-- Google Tag Manager -->
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-WN552G"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-WN552G');</script>
+    <!-- End Google Tag Manager -->
+
+        <!-- Load Godot -->
+	<script type="text/javascript">
 	var godot = []; // use godot.push() instead of $()
 
 		</script>
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
 <script language="javascript" type="text/javascript" src="https://tracking-v3.websitealive.com/3.0/?objectref=wsa1&amp;groupid=2263&amp;websiteid=0"></script></head>
 
 <body>
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WN552G"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <header>
-	<nav class="navbar navbar-primary navbar-static-top">
+
+
+    	<nav class="navbar navbar-primary navbar-static-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -119,8 +130,7 @@ Last updated: September 5, 2006
 				<ul class="list-unstyled">
 					<li><a href="/AboutUs" rel="nofollow">About Us</a></li>
 					<li><a href="/references/Employment" rel="nofollow">Careers</a></li>
-					<li><a href="/Return_Policy.php" rel="nofollow">Return Policy</a></li>
-					<li><a href="/common/cmn/contact.php" rel="nofollow">Contact Us</a></li>
+					<li><a href="/contact" rel="nofollow">Contact Us</a></li>
 				</ul>
 			</li>
 
@@ -146,6 +156,7 @@ Last updated: September 5, 2006
 			<li class="col-sm-3"><h5>Legal</h5>
 				<ul class="list-unstyled">
 					<li><a href="/Disclaimer.php" rel="nofollow">Disclaimer</a></li>
+                    <li><a href="/Return_Policy.php" rel="nofollow">Return Policy</a></li>
 					<li><a href="/Privacy_Policy.php" rel="nofollow">Privacy Policy</a></li>
 					<li><a href="/User_Agreement.php" rel="nofollow">User Agreement</a></li>
 					<li><a href="/Payment_Acceptance_Agreement.php" rel="nofollow">Payment Acceptance</a></li>
@@ -156,10 +167,17 @@ Last updated: September 5, 2006
 </footer>
 <footer style="background-color:#dadef9;margin:0;">
     <div class="container">
-   		<div class="pull-right hidden-xxs">©1998 - 2016 Comfi</div>
+
+        <div class="row">
+            <div class="visible-xs-block">
+                <a href="#" onclick="App.Methods.showFullVersion()" type="button" class="btn btn-primary btn-sm">Full version</a>
+            </div>
+        </div>
+
+   		<div class="pull-right hidden-xxs">©1998 - 2019 Comfi</div>
    		<ul class="list-inline">
-   			<li>USA Support: <a href="tel:8002196993">(800) 219-6993</a></li>
-   			<li>Global Support: <a href="tel:+16178614107">+1 (617) 861-4107</a></li>
+   			<li>USA Support: (800) 219-6993</li>
+   			<li>Global Support: +1 (617) 861-4107</li>
    		</ul>
    	</div>
 </footer>
@@ -168,10 +186,16 @@ Last updated: September 5, 2006
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
+<script src="/js/App.js"></script>
+
 <script type="text/javascript">
 $(function() {
    	$.each(godot, function(index, fn) {
