--- a/c/ce/cel/cellsalive.com.html
+++ b/c/ce/cel/cellsalive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cellsalive.com privacy policy that was archived on 2018-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180513061426id_/https%3A//www.cellsalive.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cellsalive.com privacy policy that was archived on 2019-04-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190414132216id_/https%3A//www.cellsalive.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!-- InstanceBegin template="/Templates/adFree.dwt" codeOutsideHTMLIsLocked="false" --><!--<![endif]--><head>
     <meta charset="utf-8">
@@ -11,6 +11,7 @@
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>CELLS alive! Statement of Privacy</title>
         <meta name="description" content="You can be confident that CELLS alive! is committed to our users' privacy. This statement of privacy provides an outline of data we collect and how that information is protected.">
+        
     <!-- InstanceEndEditable -->
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +29,7 @@
       <script src="js/respond.min.js"></script>
     <![endif]-->
     
- <script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=237083232996844"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script>
+ <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -46,18 +47,34 @@ window.top.location = window.location;
 </script>
 
   <!-- InstanceBeginEditable name="head" -->
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+<script>
+window.addEventListener("load", function(){
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#000",
+      "text": "#0f0"
+    },
+    "button": {
+      "background": "transparent",
+      "text": "#0f0",
+      "border": "#0f0"
+    }
+  },
+  "position": "bottom-left",
+  "content": {
+    "href": "http://www.google.com/privacy_ads.html"
+  }
+})});
+</script>
 <!-- InstanceEndEditable -->
 
 </head>
 
 <body>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=237083232996844";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="container-nav">    
 	<div class="container">   
 
