--- a/s/sm/sma/smallvideosoft.com.html
+++ b/s/sm/sma/smallvideosoft.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the smallvideosoft.com privacy policy that was archived on 2018-11-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181110110317id_/http%3A//www.smallvideosoft.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smallvideosoft.com privacy policy that was archived on 2019-04-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190414184246id_/http%3A//smallvideosoft.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
