recruitmilitary.com (archived on 2019-04-14)
{
  "alexa_rank": 418816,
  "analysis_subcorpus": true,
  "categories": "jobrelated",
  "char_count": 8811,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.47,
  "homepage_snapshot_redirected_domain": "recruitmilitary.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190304001315id_/https://recruitmilitary.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190304001315id_/http%3A//recruitmilitary.com",
  "interval": "2019_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "recruitmilitary.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190414231141id_/https%3A//recruitmilitary.com/privacy",
  "policy_title": "Privacy | RecruitMilitary",
  "policy_url": "recruitmilitary.com/privacy",
  "sha1": "16899239b1523dbf2ba8c3c2109339657556b2e9",
  "simhash": 15872955512982032637,
  "simhash_updated": false,
  "site_hostname": "recruitmilitary.com",
  "site_url": "http://recruitmilitary.com",
  "smog": 17.12,
  "strict_updated": false,
  "timestamp": "20190414231141",
  "word_count": 1400,
  "year": 2019
}

--- a/r/re/rec/recruitmilitary.com.html
+++ b/r/re/rec/recruitmilitary.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the recruitmilitary.com privacy policy that was archived on 2018-09-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180928192714id_/https%3A//recruitmilitary.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the recruitmilitary.com privacy policy that was archived on 2019-04-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190414231141id_/https%3A//recruitmilitary.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <script src="https://use.typekit.net/iza8pqe.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" media="all" href="//rm-marketing-production.s3.amazonaws.com/assets/application-e2296e16940a18ef5a70999e7d8a1150f1c3d1cb930862800fe0ad3d63293e0d.css">
+  <link rel="stylesheet" media="all" href="//rm-marketing-production.s3.amazonaws.com/assets/application-27a66f29ccddec8382191f179cfdf212427bedd313bb27d4b6d1cc11b0ef2264.css">
   <meta name="description" content="
 RVET Operating DBA RecruitMilitary LLC (“RecruitMilitary”) has created this privacy policy to demonstrate our firm commitment to protecting the privacy of ...">
   <meta name="keywords" content="veterans jobs, veterans careers, civilian careers, veteran careers">
@@ -420,11 +420,6 @@ If you wish to change or correct your personal information, or “opt out” of 
     <span class="sr-only">Twitter</span>
 </a></li>
 <li>
-  <a href="https://plus.google.com/+RecruitmilitaryVets/">
-    <i class="fa fa-google-plus fa-fw"></i>
-    <span class="sr-only">Google Plus</span>
-</a></li>
-<li>
   <a href="https://www.instagram.com/recruit_military/">
     <i class="fa fa-instagram fa-fw"></i>
     <span class="sr-only">Instagram</span>
@@ -435,7 +430,7 @@ If you wish to change or correct your personal information, or “opt out” of 
       </div>
 
       <div class="footer-copyright">
-        <p>© 2018 RecruitMilitary. All rights reserved.</p>
+        <p>© 2019 RecruitMilitary. All rights reserved.</p>
         <p>RecruitMilitary helps organizations excel in attracting, hiring, and retaining America's best talent, its veterans.</p>
 
             
@@ -454,6 +449,7 @@ If you wish to change or correct your personal information, or “opt out” of 
 </li>
 
             </ul>
+        <img src="https://assets.recruitmilitary.com/images/hvmpd-gold.png" alt="U.S. Department of Labor Gold Award" width="200px" style="margin: auto; display: block;">
       </div>
     </div>
   </div>
