--- a/c/ch/chi/chinesean.com.html
+++ b/c/ch/chi/chinesean.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chinesean.com privacy policy that was archived on 2017-09-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170920122218id_/https%3A//chinesean.com/affiliate/privacy.do) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chinesean.com privacy policy that was archived on 2019-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190415082716id_/https%3A//www.chinesean.com/affiliate/privacy.do) for the most accurate reproduction.-->
 
 <html><!-- header --><head>
 <title>Global Chinese Affiliate Network - China, Hong Kong, Taiwan, Asia</title>
