--- a/j/jm/jm-/jm-experts.com.html
+++ b/j/jm/jm-/jm-experts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jm-experts.com privacy policy that was archived on 2017-07-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170720063940id_/https%3A//www.jm-experts.com/privacy-policy/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jm-experts.com privacy policy that was archived on 2019-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190415101454id_/https%3A//www.jm-experts.com/privacy-policy/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html prefix="og: http://ogp.me/ns#" lang="en-gb"><head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -84,7 +84,7 @@ body textarea { font-family: 'Open Sans', Arial, sans-serif; }
 #menu263 > div > .childcontent-inner { width: 220px; }
 
   </style>
-  <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-MQ45D4"></script><script type="text/javascript" async="" src="https://my.clickdesk.com/clickdesk-ui/browser/livechat-new.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script src="/media/system/js/mootools-core.js" type="text/javascript"></script>
+  <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-MQ45D4"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script src="/media/system/js/mootools-core.js" type="text/javascript"></script>
   <script src="/media/system/js/core.js" type="text/javascript"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js" type="text/javascript"></script>
   <script src="/components/com_k2/js/k2.js?v2.6.7&amp;sitepath=/" type="text/javascript"></script>
@@ -392,17 +392,7 @@ $( "#accordion" ).accordion();
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();</script>
   
-    <!-- ClickDesk Live Chat Service for websites -->
-    <script type="text/javascript">
-    var _glc =_glc || []; _glc.push('all_ag9zfmNsaWNrZGVza2NoYXRyDwsSBXVzZXJzGL_2stMHDA');
-    var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' :
-    'http://my.clickdesk.com/clickdesk-ui/browser/');
-    var glcp = (('https:' == document.location.protocol) ? 'https://' : 'http://');
-    var glcspt = document.createElement('script'); glcspt.type = 'text/javascript';
-    glcspt.async = true; glcspt.src = glcpath + 'livechat-new.js';
-    var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(glcspt, s);
-    </script>
-    <!-- End of ClickDesk -->
+
 	
 <!-- Google Tag Manager -->
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQ45D4"
