--- a/m/my/myn/mynetdiary.com.html
+++ b/m/my/myn/mynetdiary.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mynetdiary.com privacy policy that was archived on 2018-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180401192304id_/http%3A//www.mynetdiary.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mynetdiary.com privacy policy that was archived on 2019-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190415122130id_/https%3A//www.mynetdiary.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -29,22 +29,22 @@
     <title>About MyNetDiary - Online Diet Log and iPhone Calorie Counter | MyNetDiary</title>
 
 <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-    <link href="/css/bootstrap-override_rel20.52.css" rel="Stylesheet" type="text/css">
-    <link href="/css/base_rel20.52.css" rel="Stylesheet" type="text/css">
+    <link href="/css/bootstrap-override_rel22.62.css" rel="Stylesheet" type="text/css">
+    <link href="/css/base_rel22.62.css" rel="Stylesheet" type="text/css">
 
 <!--[if lt IE 9]>
-    <link href="/css/ielt9_rel20.52.css"  rel="Stylesheet" type="text/css"/>
+    <link href="/css/ielt9_rel22.62.css"  rel="Stylesheet" type="text/css"/>
 <![endif]-->
 
 <!--[if lt IE 8]>
-    <link href="/css/ie7_rel20.52.css"  rel="Stylesheet" type="text/css"/>
+    <link href="/css/ie7_rel22.62.css"  rel="Stylesheet" type="text/css"/>
 <![endif]-->
 
 
 <link href="/css/partner/0/base.css" media="all" rel="Stylesheet" type="text/css">
-    <link href="/css/print_rel20.52.css" media="print" rel="Stylesheet" type="text/css">
+    <link href="/css/print_rel22.62.css" media="print" rel="Stylesheet" type="text/css">
 
-    <link href="/css/smart-app-banner_rel20.52.css" rel="Stylesheet" type="text/css">
+    <link href="/css/smart-app-banner_rel22.62.css" rel="Stylesheet" type="text/css">
 
 </head>
 
@@ -76,10 +76,10 @@
                     </div>
                 </form>                               
                 <div class="quick-links hidden-phone hidden-tablet">
-<a class="outLink white-link" id="ql-news" href="http://www.mynetdiary.com/mynetdiaryNews.html">In the News</a>
-    <a class="outLink white-link " id="ql-blog" href="http://www.mynetdiary.com/blog.html">Blog</a>
-<a class="outLink header-link white-link " id="ql-help" href="http://www.mynetdiary.com/help.html" target="_blank" title="Open the help window">Help</a>
-    <a class="outLink header-link white-link " id="ql-logon" href="https://www.mynetdiary.com/logonPage.do">Sign in</a>
+<a class="outLink white-link" id="ql-news" href="mynetdiaryNews.html">In the News</a>
+    <a class="outLink white-link " id="ql-blog" href="blog.html">Blog</a>
+<a class="outLink header-link white-link " id="ql-help" href="help.html" target="_blank" title="Open the help window">Help</a>
+    <a class="outLink header-link white-link " id="ql-logon" href="https://www.mynetdiary.com/logonPage.do">Sign In</a>
                 </div>
             </div>
         </div>
@@ -179,8 +179,6 @@
 </li>
 <li role="presentation"><a role="menuitem" tabindex="-1" href="/calorie-counter-withings-integration.html" id="/calorie-counter-withings-integration.html" class="outLink">Withings Linking</a>
 </li>
-<li role="presentation"><a role="menuitem" tabindex="-1" href="/calorie-counter-jawbone-integration.html" id="/calorie-counter-jawbone-integration.html" class="outLink">Jawbone Linking</a>
-</li>
 <li role="presentation"><a role="menuitem" tabindex="-1" href="/calorie-counter-garmin-integration.html" id="/calorie-counter-garmin-integration.html" class="outLink">Garmin Linking</a>
 </li>
 <li role="presentation"><a role="menuitem" tabindex="-1" href="/helpTwitter.html" id="/helpTwitter.html" class="outLink">Twitter Linking</a>
@@ -188,25 +186,25 @@
       </ul>
 </li>
 
-                        <li><a id="foodSearch" class="outLink" href="foodSearch.do" title="Instant search in 853,000-food database">Food Search</a>
+                        <li><a id="foodSearch" class="outLink" href="/foodSearch.do" title="Instant search in 968,000-food database">Food Search</a>
                         </li>
 
                         <li>
-                        <a id="successStories" class="outLink" href="http://www.mynetdiary.com/success.do" title="See live success stories of MyNetDiary Community members">Success Stories</a>
+                        <a id="successStories" class="outLink" href="/success.do" title="See live success stories of MyNetDiary Community members">Success Stories</a>
                         </li>
 
                     <li>
-                    <a id="weight-loss-forum" class="outLink" href="http://www.mynetdiary.com/weight-loss-forum" title="Get inspited by MyNetDiary.com Community">Community</a>
+                    <a id="weight-loss-forum" class="outLink" href="/weight-loss-forum" title="Get inspired by MyNetDiary.com Community">Community</a>
                     </li>
 
                     <li>
-                    <a id="sign-up" class="outLink" href="https://www.mynetdiary.com/signupPage.do" title="Start using your MyNetDiary account in only 60 seconds. Risk-free 14-day trial.">Sign Up!</a>
+                    <a id="sign-up" class="outLink" href="https://www.mynetdiary.com/signupPage.do" title="Start using your MyNetDiary account in only 60 seconds.">Sign Up!</a>
                     </li>
                     <li class="visible-phone visible-tablet">
-<a class="outLink white-link" id="ql-news" href="http://www.mynetdiary.com/mynetdiaryNews.html">In the News</a>
-    <a class="outLink white-link " id="ql-blog" href="http://www.mynetdiary.com/blog.html">Blog</a>
-<a class="outLink header-link white-link " id="ql-help" href="http://www.mynetdiary.com/help.html" target="_blank" title="Open the help window">Help</a>
-    <a class="outLink header-link white-link " id="ql-logon" href="https://www.mynetdiary.com/logonPage.do">Sign in</a>
+<a class="outLink white-link" id="ql-news" href="mynetdiaryNews.html">In the News</a>
+    <a class="outLink white-link " id="ql-blog" href="blog.html">Blog</a>
+<a class="outLink header-link white-link " id="ql-help" href="help.html" target="_blank" title="Open the help window">Help</a>
+    <a class="outLink header-link white-link " id="ql-logon" href="https://www.mynetdiary.com/logonPage.do">Sign In</a>
                     </li>
 
                 </ul>
@@ -499,10 +497,10 @@
     </pre>
         </div>
         <div style="margin-left:5em">
-    <pre>    Mail:	MyNetDiary Inc.
-            Opt-Out List
-            811 Church Road, Suite 105
-            Cherry Hill, New Jersey 08002
+    <pre>    Mail: MyNetDiary Inc.
+10000 Lincoln Drive East, Suite 201
+Opt-Out List
+Marlton, NJ 08053-3105
     </pre>
         </div>
 
@@ -519,9 +517,9 @@
     </pre>
         </div>
         <div style="margin-left:5em">
-    <pre>    Mail:	MyNetDiary Inc.
-            811 Church Road, Suite 105
-            Cherry Hill, New Jersey 08002
+    <pre>    Mail: MyNetDiary Inc.
+10000 Lincoln Drive East, Suite 201
+Marlton, NJ 08053-3105
     </pre>
         </div>
     </div>
@@ -605,7 +603,6 @@
                                 
                                 <p><a id="footer-fitbit-linking" class="outLink white-link" href="/calorie-counter-fitbit-integration.html">Fitbit linking</a></p>
                                 <p><a id="footer-withings-linking" class="outLink white-link" href="/calorie-counter-withings-integration.html">Withings linking</a></p>
-                                <p><a id="footer-jawbone-linking" class="outLink white-link" href="/calorie-counter-jawbone-integration.html">Jawbone linking</a></p>
                                 <p><a id="footer-garmin-linking" class="outLink white-link" href="/calorie-counter-garmin-integration.html">Garmin linking</a></p>
                                 <p><a id="footer-twitter-linking" class="outLink white-link" href="/helpTwitter.html">Twitter linking</a></p>
 
@@ -679,10 +676,19 @@
     var staticUrl='http://www.mynetdiary.com/';
     var externalSecureUrl='https://www.mynetdiary.com/';
     var partnerName='MyNetDiary';
+    var requestScopeDate = null;
+</script>
+
+<script type="text/javascript">
+        var isAdmin = false;
+
+        var mobileLinking = false;
+
+
 
 </script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script src="/js/dist/lazyload_rel20.52.js" type="text/javascript"></script>
+    <script src="/js/dist/lazyload_rel22.62.js" type="text/javascript"></script>
 <script type="text/javascript">
     jQuery("img.lazy").lazyload({threshold: 400});
 
@@ -694,13 +700,13 @@
         };
     }
 </script>
-    <script src="/js/dist/bootstrap_rel20.52.js" type="text/javascript"></script>
-    <script src="/js/dist/json_rel20.52.js" type="text/javascript"></script>
-    <script src="/js/dist/diary_bs_rel20.52.js" type="text/javascript"></script>
-    <script src="/js/dist/forms_bs_rel20.52.js" type="text/javascript"></script>
-    <script src="/js/dist/foodLabel_rel20.52.js" type="text/javascript"></script>
-    <script src="/js/dist/foodSearch_rel20.52.js" type="text/javascript"></script>
-    <script src="/js/dist/smart-app-banner_rel20.52.js" type="text/javascript"></script>
+    <script src="/js/dist/bootstrap_rel22.62.js" type="text/javascript"></script>
+    <script src="/js/dist/json_rel22.62.js" type="text/javascript"></script>
+    <script src="/js/dist/diary_bs_rel22.62.js" type="text/javascript"></script>
+    <script src="/js/dist/forms_bs_rel22.62.js" type="text/javascript"></script>
+    <script src="/js/dist/foodLabel_rel22.62.js" type="text/javascript"></script>
+    <script src="/js/dist/foodSearch_rel22.62.js" type="text/javascript"></script>
+    <script src="/js/dist/smart-app-banner_rel22.62.js" type="text/javascript"></script>
 
 
     <script type="text/javascript">var switchTo5x=true;</script>
