--- a/r/rv/rv./rv.net.html
+++ b/r/rv/rv./rv.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rv.net privacy policy that was archived on 2018-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181215075041id_/http%3A//www.rv.net/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rv.net privacy policy that was archived on 2019-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190415122615id_/http%3A//www.rv.net/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -19,12 +19,13 @@
 
 
 
-<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
+<script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head><body><img src="https://smart-pixl.com/12420/00057_rv.net_SMART.GIF" style="display: none !important;">
+
 
 
 
 			
-			<body>				
+							
 	
 
 
@@ -41,7 +42,7 @@
 		OAS_rn = new String (Math.random()); OAS_rns = OAS_rn.substring (2, 11);
 		document.write("<scr"+"ipt type='text/javascript' src='https://oasc17.247realmedia.com/RealMedia/ads/adstream_jx.ads/www.rv.net/header/1" + OAS_rns +"@Top!Top?'><\/script>");
 		//  -->
-	</script><script type="text/javascript" src="https://oasc17.247realmedia.com/RealMedia/ads/adstream_jx.ads/www.rv.net/header/1492119654@Top!Top?"></script>
+	</script><script type="text/javascript" src="https://oasc17.247realmedia.com/RealMedia/ads/adstream_jx.ads/www.rv.net/header/1167558224@Top!Top?"></script>
 	
 	
 	<noscript>
@@ -276,7 +277,7 @@
 					<a href="http://www.rv.net/privacy.cfm">Privacy Policy</a>&nbsp;|&nbsp;
 					<a href="http://www.rv.net/privacy.cfm">Your Privacy Rights</a>&nbsp;|&nbsp;
 				
-          ©2018 CWI, Inc. ©2018 Good Sam Enterprises, LLC. All Rights Reserved.
+          ©2019 CWI, Inc. ©2019 Good Sam Enterprises, LLC. All Rights Reserved.
         </span>
 				<br><img src="/images/x.gif" width="1" height="10" alt="" border="0"><br>
 				</div>
@@ -330,20 +331,4 @@
 
 
 
-
-		
-		<!-- 
-		
-		---------------------------
-		
-		IP: 10.1.0.3
-		
-		Server: CO-WEB-CF-03
-		
-		Execution Time: 23ms
-		
-		---------------------------
-		
-		-->
-		
-	</body></html>
+</body></html>
