getstat.com (archived on 2019-04-15)
{
  "alexa_rank": 267066,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7004,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.85,
  "homepage_snapshot_redirected_domain": "getstat.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190331081846id_/https://getstat.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190331081846id_/http%3A//getstat.com",
  "interval": "2019_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "getstat.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190415165729id_/https%3A//getstat.com/privacy-policy",
  "policy_title": "Privacy policy - STAT Search Analytics",
  "policy_url": "getstat.com/privacy-policy",
  "sha1": "2285a4f63e43f5ad941d8fd25562e2a5e45b8575",
  "simhash": 2629852160603689980,
  "simhash_updated": false,
  "site_hostname": "getstat.com",
  "site_url": "http://getstat.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20190415165729",
  "word_count": 1168,
  "year": 2019
}

--- a/g/ge/get/getstat.com.html
+++ b/g/ge/get/getstat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getstat.com privacy policy that was archived on 2018-10-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181019164237id_/https%3A//getstat.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getstat.com privacy policy that was archived on 2019-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190415165729id_/https%3A//getstat.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns#"><!--<![endif]--><head>
 	<meta charset="UTF-8">
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="/drive/themes/stat/i/favicon.ico">
   	<link rel="icon" href="/drive/themes/stat/i/favicon.ico" type="image/x-icon">
 	
-<!-- This site is optimized with the Yoast SEO plugin v8.2 - https://yoast.com/wordpress/plugins/seo/ -->
+<!-- This site is optimized with the Yoast SEO plugin v10.0.1 - https://yoast.com/wordpress/plugins/seo/ -->
 <meta name="description" content="We’re all about respecting and protecting your privacy. We also aim to be as transparent as possible about how we collect, use, and disclose your personal information in compliance with CASL and GDPR.">
 <link rel="canonical" href="https://getstat.com/privacy-policy/">
 <meta property="og:locale" content="en_US">
@@ -35,8 +35,8 @@
 <link rel="alternate" type="application/rss+xml" title="STAT Search Analytics » Feed" href="https://getstat.com/feed/">
 <link rel="alternate" type="application/rss+xml" title="STAT Search Analytics » Comments Feed" href="https://getstat.com/comments/feed/">
 <link rel="alternate" type="application/rss+xml" title="STAT Search Analytics » Privacy policy Comments Feed" href="https://getstat.com/privacy-policy/feed/">
-		<script type="text/javascript" src="https://pi.pardot.com/pd.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-K4NSW2"></script><script type="text/javascript">
-			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/11\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/11\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/getstat.com\/core\/wp-includes\/js\/wp-emoji-release.min.js"}};
+		<script type="text/javascript" src="https://pi.pardot.com/pd.js"></script><script type="text/javascript" async="" src="https://widget.intercom.io/widget/vs3oy1sa"></script><script async="" src="//static.ads-twitter.com/uwt.js"></script><script type="text/javascript" async="" src="https://snap.licdn.com/li.lms-analytics/insight.min.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-K4NSW2"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript">
+			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/11.2.0\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/11.2.0\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/getstat.com\/core\/wp-includes\/js\/wp-emoji-release.min.js"}};
 			!function(a,b,c){function d(a,b){var c=String.fromCharCode;l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,a),0,0);var d=k.toDataURL();l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,b),0,0);var e=k.toDataURL();return d===e}function e(a){var b;if(!l||!l.fillText)return!1;switch(l.textBaseline="top",l.font="600 32px Arial",a){case"flag":return!(b=d([55356,56826,55356,56819],[55356,56826,8203,55356,56819]))&&(b=d([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]),!b);case"emoji":return b=d([55358,56760,9792,65039],[55358,56760,8203,9792,65039]),!b}return!1}function f(a){var c=b.createElement("script");c.src=a,c.defer=c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var g,h,i,j,k=b.createElement("canvas"),l=k.getContext&&k.getContext("2d");for(j=Array("flag","emoji"),c.supports={everything:!0,everythingExceptFlag:!0},i=0;i<j.length;i++)c.supports[j[i]]=e(j[i]),c.supports.everything=c.supports.everything&&c.supports[j[i]],"flag"!==j[i]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[j[i]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(h=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",h,!1),a.addEventListener("load",h,!1)):(a.attachEvent("onload",h),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),g=c.source||{},g.concatemoji?f(g.concatemoji):g.wpemoji&&g.twemoji&&(f(g.twemoji),f(g.wpemoji)))}(window,document,window._wpemojiSettings);
 		</script><script src="https://getstat.com/core/wp-includes/js/wp-emoji-release.min.js" type="text/javascript" defer=""></script>
 		<style type="text/css">
@@ -53,13 +53,14 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
+	<link rel="stylesheet" id="wp-block-library-css" href="https://getstat.com/core/wp-includes/css/dist/block-library/style.min.css" type="text/css" media="all">
 <link rel="stylesheet" id="style-css" href="https://getstat.com/drive/themes/stat/static/css/style.css" type="text/css" media="all">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <link rel="https://api.w.org/" href="https://getstat.com/wp-json/">
 <link rel="shortlink" href="https://getstat.com/?p=23">
 <link rel="alternate" type="application/json+oembed" href="https://getstat.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fgetstat.com%2Fprivacy-policy%2F">
 <link rel="alternate" type="text/xml+oembed" href="https://getstat.com/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fgetstat.com%2Fprivacy-policy%2F&amp;format=xml">
-<script id="pixel-script-poptin" src="https://cdn.popt.in/pixel.js?id=2152a58774ab5" async="true"></script> <!-- Markup (JSON-LD) structured in schema.org ver.4.6.1 START -->
+<script id="pixel-script-poptin" src="https://cdn.popt.in/pixel.js?id=2152a58774ab5" async="true"></script> <!-- Markup (JSON-LD) structured in schema.org ver.4.6.5 START -->
 <script type="application/ld+json">
 {
     "@context": "http://schema.org",
@@ -237,6 +238,28 @@ img.emoji {
 
 	</style>
 	<![endif]-->
+	
+	
+	<!-- Facebook Pixel Code -->
+	<script>
+	!function(f,b,e,v,n,t,s)
+	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	n.queue=[];t=b.createElement(e);t.async=!0;
+	t.src=v;s=b.getElementsByTagName(e)[0];
+	s.parentNode.insertBefore(t,s)}(window,document,'script',
+	'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '513289945501876'); 
+	fbq('track', 'PageView');
+	</script>
+	<noscript> <img height="1" width="1" 
+	src="https://www.facebook.com/tr?id=513289945501876&ev=PageView
+	&noscript=1"/>
+	</noscript>
+	<!-- End Facebook Pixel Code -->
+	
+	
+	
 </head>
 
 <body class="page-template-default page page-id-23">
@@ -642,7 +665,6 @@ Canada<br>
 <li id="menu-item-13804" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-13804"><a href="https://getstat.com/events/">Events</a>
 <ul class="sub-menu">
 	<li id="menu-item-15204" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15204"><a target="_blank" href="https://getstat.com/citycrawl/">City Crawl</a></li>
-	<li id="menu-item-13807" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-13807"><a href="https://getstat.com/events/book-our-event-space/">Book our event space</a></li>
 	<li id="menu-item-13805" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-13805"><a href="https://getstat.com/events/speaker-rob-bucci/">Speaker: Rob Bucci</a></li>
 </ul>
 </li>
@@ -752,7 +774,7 @@ Canada V6A 1E3</div>
 			<small>©  Moz Holdings Canada Inc. 2009</small>
 			<nav id="legal-nav">
 				<div class="menu-legal-navigation-container"><ul id="menu-legal-navigation" class="menu"><li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-61"><a title="Terms of use" href="https://getstat.com/terms-of-use/">Terms of use</a></li>
-<li id="menu-item-60" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-23 current_page_item menu-item-60"><a title="Privacy policy" href="https://getstat.com/privacy-policy/">Privacy policy</a></li>
+<li id="menu-item-60" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-23 current_page_item menu-item-60"><a title="Privacy policy" href="https://getstat.com/privacy-policy/" aria-current="page">Privacy policy</a></li>
 <li id="menu-item-9714" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9714"><a href="https://getstat.com/sitemap/">Sitemap</a></li>
 <li id="menu-item-7055" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7055"><a title="Social policy" href="https://getstat.com/social-policy/">Social policy</a></li>
 <li id="menu-item-13875" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-13875"><a href="https://getstat.com/brand-assets/">Brand assets</a></li>
@@ -767,7 +789,24 @@ Canada V6A 1E3</div>
 
 
 
-<script type="text/javascript">
+<script data-cfasync="false">
+  document.onreadystatechange = function () {
+    if (document.readyState == "complete") {
+      var logout_link = document.querySelectorAll('a[href*="wp-login.php?action=logout"]');
+      if (logout_link) {
+        for(var i=0; i < logout_link.length; i++) {
+          logout_link[i].addEventListener( "click", function() {
+            Intercom('shutdown');
+          });
+        }
+      }
+    }
+  };
+</script>
+<script data-cfasync="false">
+  window.intercomSettings = {"app_id":"vs3oy1sa"};
+</script>
+<script data-cfasync="false">(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/vs3oy1sa';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script><script type="text/javascript">
 /* <![CDATA[ */
 var countVars = {"disqusShortname":"getstat"};
 /* ]]> */
@@ -775,7 +814,7 @@ var countVars = {"disqusShortname":"getstat"};
 <script type="text/javascript" src="https://getstat.com/drive/plugins/disqus-comment-system/public/js/comment_count.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
-var embedVars = {"disqusConfig":{"integration":"wordpress 3.0.16"},"disqusIdentifier":"23 http:\/\/getstat.dev\/?page_id=23","disqusShortname":"getstat","disqusTitle":"Privacy policy","disqusUrl":"https:\/\/getstat.com\/privacy-policy\/","postId":"23"};
+var embedVars = {"disqusConfig":{"integration":"wordpress 3.0.17"},"disqusIdentifier":"23 http:\/\/getstat.dev\/?page_id=23","disqusShortname":"getstat","disqusTitle":"Privacy policy","disqusUrl":"https:\/\/getstat.com\/privacy-policy\/","postId":"23"};
 /* ]]> */
 </script>
 <script type="text/javascript" src="https://getstat.com/drive/plugins/disqus-comment-system/public/js/comment_embed.js"></script>
@@ -833,6 +872,36 @@ else { window.addEventListener('load', async_load, false); }
 })();
 </script>
 
+
+
+<!-- LinkedIn Tag -->
+<script type="text/javascript">
+_linkedin_partner_id = "10722";
+window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+</script><script type="text/javascript">
+(function(){var s = document.getElementsByTagName("script")[0];
+var b = document.createElement("script");
+b.type = "text/javascript";b.async = true;
+b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+s.parentNode.insertBefore(b, s);})();
+</script>
+<noscript>
+<img height="1" width="1" style="display:none;" alt="" src="https://dc.ads.linkedin.com/collect/?pid=10722&fmt=gif" />
+</noscript>
+<!-- end LinkedIn Tag -->
+
+
+<!-- Twitter universal website tag code -->
+<script>
+!function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+},s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
+a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
+// Insert Twitter Pixel ID and Standard Event data below
+twq('init','nurz7');
+twq('track','PageView');
+</script>
+<!-- End Twitter universal website tag code -->
 
 
 
