videocollector.co.uk (archived on 2019-04-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 2839,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.89,
  "homepage_snapshot_redirected_domain": "videocollector.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190323040752id_/http://www.videocollector.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190323040752id_/http%3A//videocollector.co.uk",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "videocollector.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190415173644id_/http%3A//www.videocollector.co.uk/privacy.php",
  "policy_title": "VideoCollector.co.uk Privacy Policy",
  "policy_url": "videocollector.co.uk/privacy.php",
  "sha1": "9d1ea25be037a55effbe6dc8fb2f0a2a2453f6b9",
  "simhash": 8022716875361755273,
  "simhash_updated": false,
  "site_hostname": "videocollector.co.uk",
  "site_url": "http://videocollector.co.uk",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20190415173644",
  "word_count": 466,
  "year": 2019
}

--- a/v/vi/vid/videocollector.co.uk.html
+++ b/v/vi/vid/videocollector.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the videocollector.co.uk privacy policy that was archived on 2018-08-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180831201844id_/http%3A//www.videocollector.co.uk/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the videocollector.co.uk privacy policy that was archived on 2019-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190415173644id_/http%3A//www.videocollector.co.uk/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <title>VideoCollector.co.uk Privacy Policy</title>
@@ -11,7 +11,7 @@
 <meta name="googlebot" content="noarchive"> 
 
 <meta name="author" content="Gloo Marketing">
-<meta name="copyright" content="2018 Gloo Marketing">
+<meta name="copyright" content="2019 Gloo Marketing">
 <meta name="owner" content="stick@gloo-marketing.co.uk">
 	
 <link href="includes/style.css" rel="stylesheet" type="text/css" media="screen">
@@ -76,7 +76,7 @@
 <p><a href="http://www.google.com/privacypolicy.html">http://www.google.com/privacypolicy.html</a></p>
 
 <hr>
-<div class="fivecol"><a href="http://www.videocollector.co.uk/lust-for-a-vampire/30078" title="Lust for A Vampire" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/lust-for-a-vampire-22597s.jpg" alt="Lust for A Vampire" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/maniac-cop-3-badge-of-silence/33645" title="Maniac Cop 3: Badge of Silence" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/maniac-cop-3-badge-of-silence-27085s.jpg" alt="Maniac Cop 3: Badge of Silence" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/flintstone-christmas-a/37267" title="Flintstone Christmas, A" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/flintstone-christmas-a-31222s.jpg" alt="Flintstone Christmas, A" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/fifth-day-of-peace-the/32015" title="Fifth Day of Peace, The" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/fifth-day-of-peace-the-25127s.jpg" alt="Fifth Day of Peace, The" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/rats--rabbits/38144" title="Rats &amp; Rabbits" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/rats--rabbits-32298s.jpg" alt="Rats &amp; Rabbits" width="100" height="70"></a></div></div>
+<div class="fivecol"><a href="http://www.videocollector.co.uk/night-eyes/37182" title="Night Eyes" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/night-eyes-31102s.jpg" alt="Night Eyes" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/another-country/45173" title="Another Country" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/another-country-41967s.jpg" alt="Another Country" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/colt-and-the-devil-a/44519" title="Colt and the Devil, A" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/colt-and-the-devil-a-41106s.jpg" alt="Colt and the Devil, A" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/ziegfeld-follies/17863" title="Ziegfeld Follies" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/ziegfeld-follies-7856s.jpg" alt="Ziegfeld Follies" width="100" height="70"></a></div><div class="fivecol"><a href="http://www.videocollector.co.uk/starcade-90---collision-course/45312" title="Starcade '90 - Collision Course" rel="nofollow"><img src="http://www.videocollector.co.uk/data/images/starcade-90---collision-course-42140s.jpg" alt="Starcade '90 - Collision Course" width="100" height="70"></a></div></div>
 
 <div id="navi">
 
@@ -120,7 +120,7 @@
 
 <div id="base">
 
-<p style="text-align:center;">• Read our <a href="http://www.videocollector.co.uk/privacy.php" title="VideoCollector.co.uk Privacy Policy" rel="nofollow">Privacy Policy</a> • Your access to and use of this Website is conditional on your acceptance of these <a href="http://www.videocollector.co.uk/terms-of-use.php" title="Terms and Conditions of Use of the website" rel="nofollow">Terms and Conditions of Use</a> © VideoCollector.co.uk 2018 Overseas</p>
+<p style="text-align:center;">• Read our <a href="http://www.videocollector.co.uk/privacy.php" title="VideoCollector.co.uk Privacy Policy" rel="nofollow">Privacy Policy</a> • Your access to and use of this Website is conditional on your acceptance of these <a href="http://www.videocollector.co.uk/terms-of-use.php" title="Terms and Conditions of Use of the website" rel="nofollow">Terms and Conditions of Use</a> © VideoCollector.co.uk 2019 Overseas</p>
 
 
 </div>
